compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__match_dynamic_size.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\nfn go(x) {\n  let n = 16\n  let assert <<a:size(n)>> = x\n}\n"
---
----- SOURCE CODE

fn go(x) {
  let n = 16
  let assert <<a:size(n)>> = x
}


----- COMPILED JAVASCRIPT
import { makeError, bitArraySliceToInt } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

function go(x) {
  let n = 16;
  if (n <= 0 || x.bitSize !== n) {
    throw makeError(
      "let_assert",
      FILEPATH,
      "my/mod",
      4,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x, start: 27, end: 55, pattern_start: 38, pattern_end: 51 }
    )
  }
  let a = bitArraySliceToInt(x, 0, n, true, false);
  return x;
}
