compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__match_dynamic_size_shadowed_variable.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\nfn go(x) {\n  let n = 16\n  let n = 5\n  let assert <<a:size(n)>> = x\n}\n"
---
----- SOURCE CODE

fn go(x) {
  let n = 16
  let n = 5
  let assert <<a:size(n)>> = x
}


----- COMPILED JAVASCRIPT
import { makeError, bitArraySliceToInt } from "../gleam.mjs";

function go(x) {
  let n = 16;
  let n$1 = 5;
  if (n$1 <= 0 || x.bitSize !== n$1) {
    throw makeError(
      "let_assert",
      "my/mod",
      5,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x }
    )
  }
  let a = bitArraySliceToInt(x, 0, n$1, true, false);
  return x;
}
