compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__match_float_16_bit.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn go(x) {\n  let assert <<a:float-size(16)>> = x\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  let assert <<a:float-size(16)>> = x
}


----- COMPILED JAVASCRIPT
import { makeError, bitArraySliceToFloat } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go(x) {
  let a;
  if (
    x.bitSize === 16 &&
    globalThis.Number.isFinite(bitArraySliceToFloat(x, 0, 16, true))
  ) {
    a = bitArraySliceToFloat(x, 0, 16, true);
  } else {
    throw makeError(
      "let_assert",
      FILEPATH,
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x, start: 18, end: 53, pattern_start: 29, pattern_end: 49 }
    )
  }
  return x;
}
