compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__match_float_little_endian.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn go(x) {\n  let assert <<a:float-little, b:int>> = x\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  let assert <<a:float-little, b:int>> = x
}


----- COMPILED JAVASCRIPT
import { makeError, bitArraySliceToFloat } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go(x) {
  let a;
  let b;
  if (
    x.bitSize >= 64 &&
    globalThis.Number.isFinite(bitArraySliceToFloat(x, 0, 64, false)) &&
    x.bitSize === 72
  ) {
    a = bitArraySliceToFloat(x, 0, 64, false);
    b = x.byteAt(8);
  } else {
    throw makeError(
      "let_assert",
      FILEPATH,
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x, start: 18, end: 58, pattern_start: 29, pattern_end: 54 }
    )
  }
  return x;
}
