compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__match_literal_aligned_float.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\nfn go(x) {\n  let assert <<_, 1.1, _:bits>> = x\n}\n"
---
----- SOURCE CODE

fn go(x) {
  let assert <<_, 1.1, _:bits>> = x
}


----- COMPILED JAVASCRIPT
import { makeError, bitArraySliceToFloat } from "../gleam.mjs";

function go(x) {
  if (
    x.bitSize < 8 ||
    x.bitSize < 72 ||
    bitArraySliceToFloat(x, 8, 72, true) !== 1.1
  ) {
    throw makeError(
      "let_assert",
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x }
    )
  }
  return x;
}
