compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__match_literal_float.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
assertion_line: 1335
expression: "\nfn go(x) {\n  let assert <<1.4, b:int>> = x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go(x) {
  let assert <<1.4, b:int>> = x
}


----- COMPILED JAVASCRIPT
import { makeError, bitArraySliceToFloat } from "../gleam.mjs";

function go(x) {
  if (x.bitSize !== 72 || bitArraySliceToFloat(x, 0, 64, true) !== 1.4) {
    throw makeError(
      "let_assert",
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x, start: 14, pattern_start: 25, pattern_end: 39 }
    )
  }
  let b = x.byteAt(8);
  return x;
}
